the mentor's comments from revision1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!--header-->
         <header class="header">
-        <div class="header-container">
+        <div class="container header-container">
                 <nav class="nav">
                     <a href="" class="link logo logo_color_dark"> <span class="logo-accent">Web</span>Studio </a>
                     <ul class="nav__list">
@@ -59,7 +59,7 @@
                         <a href="" class="mobile-menu__link">Студія</a>
                     </li>
                     <li class="mobile-menu__item">
-                        <a href="" class="mobile-menu__link">Портфоліо</a>
+                        <a href="./portfolio.html" class="mobile-menu__link">Портфоліо</a>
                     </li>
                     <li class="mobile-menu__item">
                         <a href="" class="mobile-menu__link">Контакти</a>
