--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body>
     <!--header-->
         <header class="header">
-        <div class="header-container">
+        <div class="container header-container">
         <nav class="nav">
             <a href="" class="link logo logo_color_dark"> <span class="logo-accent">Web</span>Studio </a>
             <ul class="nav__list">
@@ -50,7 +50,7 @@
         <nav>
             <ul class="mobile-menu__list">
                 <li class="mobile-menu__item">
-                    <a href="" class="mobile-menu__link">Студія</a>
+                    <a href="./index.html" class="mobile-menu__link">Студія</a>
                 </li>
                 <li class="mobile-menu__item">
                     <a href="" class="mobile-menu__link">Портфоліо</a>
